# formation-mcp

./: .gitignore  .goreleaser.yaml  API_COVERAGE_ANALYSIS.md  CLAUDE.md  Justfile  LICENSE.txt  README.md  formation-mcp.yaml.example  go.mod  go.sum  pyproject.toml
cmd/formation-mcp/: main.go
internal/client/: client.go  client_test.go  types.go
internal/config/: config.go  config_test.go
internal/logging/: logging.go  logging_test.go
internal/server/: server.go  server_test.go
internal/workflows/: workflows.go  workflows_test.go
src/formation_mcp/: __init__.py  __main__.py  client.py  config.py  server.py  workflows.py
tests/: __init__.py  test_client.py  test_data.py  test_workflows.py
